begin work on refactor