@@ -6,7 +6,7 @@
 
     <groupId>io.github.cj_cate.ideationitems</groupId>
     <artifactId>IdeationItems</artifactId>
-    <version>Alpha-0.1.2</version>
+    <version>Simple-Alpha-0.1.2</version>
     <packaging>jar</packaging>
 
     <name>IdeationItems</name>
@@ -25,8 +25,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -44,6 +45,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <outputDirectory>/home/cj/Games/mcs/test3/plugins</outputDirectory>
+                </configuration>
             </plugin>
 
 <!--    mfnalex plugin to re-map the mojang mappings to obfuscated:         -->
